<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/circle_backgroud"
    tools:context=".controller.ActivityIdentificationScreen">

    <Button
        android:id="@+id/btnNextIdentificaion"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif"
        android:text="@string/next"
        android:textColor="@color/circle_backgroud"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="270dp"
        android:layout_height="250dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img1_splash_screen"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/what_s_your_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:backgroundTint="@drawable/edittext_background_personalizado"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/material_dynamic_neutral30"
        android:textColorHint="@color/material_dynamic_neutral50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inuptMonto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="@drawable/edittext_background_personalizado"
        android:ems="10"
        android:hint="@string/initial_amounta"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/material_dynamic_neutral30"
        android:textColorHint="@color/material_dynamic_neutral50"
        app:layout_constraintEnd_toEndOf="@+id/inputNombre"
        app:layout_constraintStart_toStartOf="@+id/inputNombre"
        app:layout_constraintTop_toBottomOf="@+id/inputNombre"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>