<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/circle_backgroud"
    tools:context=".controller.ActivityVerificationScreen">

    <Button
        android:id="@+id/btnGenerarNuevocodigo"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:fontFamily="sans-serif"
        android:text="@string/generate_new_code"
        android:textColor="@color/circle_backgroud"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNextVerificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNextVerificacion"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif"
        android:text="@string/next"
        android:textColor="@color/circle_backgroud"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="290dp"
        android:layout_height="270dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img1_splash_screen"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/allisson"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <EditText
        android:id="@+id/inputCodigo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@drawable/edittext_background_personalizado"
        android:ems="10"
        android:hint="Enter the code"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral30"
        android:textColorHint="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

</androidx.constraintlayout.widget.ConstraintLayout>